test/typechecker.d/invalid/const0.souc.bad
x: Integer = 4: Char
